fix: force JDK 17 for Android builds